# openblup

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  validation.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/data/: dataframe.rs  factor.rs  io.rs  mod.rs
crates/core/src/diagnostics/: convergence.rs  crossval.rs  ddf.rs  information.rs  mod.rs  residuals.rs  wald.rs
crates/core/src/genetics/: ainverse.rs  gmatrix.rs  hmatrix.rs  mod.rs  pedigree.rs  rrblup.rs  selection_index.rs
crates/core/src/gpu/: mod.rs
crates/core/src/lmm/: ai_reml.rs  blup.rs  mme.rs  mod.rs  multitrait_reml.rs  reml.rs  result.rs
crates/core/src/matrix/: dense.rs  mod.rs  sparse.rs  sparse_cholesky.rs  sparse_inverse.rs
crates/core/src/model/: builder.rs  design.rs  mod.rs  multitrait.rs
crates/core/src/variance/: ar1.rs  diagonal.rs  factor_analytic.rs  identity.rs  kronecker.rs  mod.rs  traits.rs  unstructured.rs
crates/core/tests/: integration_test.rs  multitrait_test.rs  pedigree_blup_test.rs
crates/python-bindings/: Cargo.toml
crates/python-bindings/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: ainverse.rs  gmatrix.rs  lib.rs  mme.rs  pedigree.rs  reml.rs
crates/wasm/www/: index.html
python/plant_breeding_lmm/: __init__.py  _internal.pyi
