[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/python-bindings",
    "crates/cli",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jakob"]

[workspace.dependencies]
# Core math
nalgebra = "0.33"
# Sparse Cholesky (faer)
faer = "0.20"
# Sparse matrices
sprs = "0.11"
# Data I/O
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parallelism
rayon = "1.10"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
log = "0.4"
env_logger = "0.11"
# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
# CLI
clap = { version = "4", features = ["derive"] }
# Random / testing
rand = "0.8"
approx = "0.5"
# Indexing
indexmap = "2"
