[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openblup"
version = "0.1.0"
description = "Open-source REML and BLUP for plant and animal breeding"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Jakob"}]
keywords = ["breeding", "BLUP", "REML", "mixed-models", "genetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
scipy = ["scipy>=1.7"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "openblup"
manifest-path = "crates/python-bindings/Cargo.toml"
