[package]
name = "plant-breeding-lmm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openblup"
path = "src/main.rs"

[dependencies]
plant-breeding-lmm-core = { path = "../core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
