[package]
name = "plant-breeding-lmm-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
plant-breeding-lmm-core = { path = "../core" }
pyo3 = { workspace = true }
numpy = { workspace = true }
