[package]
name = "plant-breeding-lmm-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "openblup"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
plant-breeding-lmm-core = { path = "../core" }
nalgebra = { workspace = true }
sprs = { workspace = true }
