[package]
name = "openblup-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for OpenBLUP - browser-based breeding value estimation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
